--- a/css/index.css
+++ b/css/index.css
@@ -1,2 +1,288 @@
-/* OBFUSCATED BY Y12 XM at 2024/07/27 04:34:44 */
-[class~=left1] [class~=van-image]{position:relative;}[class~=left1] [class~=van-image]{display:inline-block;}[class~=left1] [class~=van-image],.left1{margin-top:11.25pt;}body{width:450pt;}[class~=scrollbar]{overflow-x:hidden;}[class~=scrollbar]{overflow-y:auto;}[class~=scrollbar]{-webkit-overflow-scrolling:touch;}.left1,[class~=left1] [class~=van-button]{text-align:center;}[class~=scrollbar]{border-radius:.15625in;}[class~=scrollbar]::-webkit-scrollbar{width:7.5pt;}[class~=scrollbar]::-webkit-scrollbar{height:.3125pc;}body{height:3.645833333in;}[class~=left1] [class~=van-button]{font-size:37.5pt;}[class~=scrollbar]::-webkit-scrollbar-track{border-radius:.15625in;}[class~=scrollbar]::-webkit-scrollbar-thumb{border-radius:11.25pt;}[class~=scrollbar]::-webkit-scrollbar-thumb{-webkit-box-shadow:inset 0 0 .375pc rgba(0,0,0,.3);}[class~=left1] [class~=van-button]{width:.9375in;}[class~=scrollbar]::-webkit-scrollbar-thumb{background-color:#b8b8b8;}.left{width:12.5pc;}*{color:#fff;}body{font-family:"Noto Sans TC",sans-serif;}.left{height:100%;}[class~=right1],body,.left1,[class~=left2]{border-radius:10px;}.left1,[class~=left2]{width:1.5625in;}.left1{height:2.291666667in;}.left1,[class~=left2]{margin-left:30px;}[class~=left2],.left1{background-color:#030303;}[class~=left1] [class~=van-button]{border-radius:.3125pc;}[class~=left1] [class~=van-button]{background-color:#000;}.left1{overflow:auto;}[class~=left1] [class~=van-button],.left1{border-left-width:.010416667in;}[class~=left1] [class~=van-button],.left1{border-bottom-width:.010416667in;}.left1,[class~=left1] [class~=van-button]{border-right-width:.010416667in;}[class~=left1] [class~=van-button],.left1{border-top-width:.010416667in;}[class~=left1] [class~=van-button],.left1{border-left-style:solid;}[class~=left2] font1{font-size:.125in;}.left1,[class~=left1] [class~=van-button]{border-bottom-style:solid;}body{background-size:cover;}.left1,[class~=left1] [class~=van-button]{border-right-style:solid;}body{background-position:center center;}[class~=left1] [class~=van-button],.left1{border-top-style:solid;}[class~=left1] [class~=van-button],.left1{border-left-color:#fff;}.left1,[class~=left1] [class~=van-button]{border-bottom-color:#fff;}.left1,[class~=left1] [class~=van-button]{border-right-color:#fff;}[class~=left1] [class~=van-button],.left1{border-top-color:#fff;}[class~=left1] [class~=van-button],.left1{border-image:none;}[class~=right1],[class~=left1] [class~=van-button],[class~=left2],.left1{box-shadow:0 0 0px #fff inset,0 0 .052083333in #fff;}[class~=left2]{height:80px;}[class~=right1],[class~=left2]{margin-top:.15625in;}nobr{white-space:nowrap;}[class~=left2],nobr{display:flex;}[class~=left2]{border-left-width:.0625pc;}[class~=left2]{border-bottom-width:.0625pc;}[class~=left2]{border-right-width:.0625pc;}[class~=left2]{border-top-width:.0625pc;}[class~=left2]{border-left-style:solid;}[class~=left2]{border-bottom-style:solid;}[class~=left2]{border-right-style:solid;}[class~=left2]{border-top-style:solid;}[class~=left2]{border-left-color:#fff;}[class~=left2]{border-bottom-color:#fff;}[class~=left2]{border-right-color:#fff;}[class~=left2] font1{margin-left:2.75pc;}[class~=left2]{border-top-color:#fff;}[class~=left1] [class~=van-button]{margin-left:7.5pt;}[class~=left2]{border-image:none;}.right{height:100%;}[class~=left1] [class~=van-button],[class~=right] [class~=van-button]{margin-bottom:7.5pt;}[class~=right] [class~=van-button],[class~=left1] [class~=van-button]{margin-right:7.5pt;}.right,[class~=right1]{overflow:auto;}[class~=right1]{width:277.5pt;}[class~=left1] [class~=van-button]{margin-top:7.5pt;}[class~=right1]{height:3.333333333in;}[class~=right1]{margin-left:1 0px;}*{font-size:.125in;}[class~=left2] [class~=van-image],[class~=ayimgui]{position:relative;}[class~=right1]{background-color:#030303;}[class~=right1],[class~=left2] [class~=font],[class~=right] [class~=van-button],[class~=left2] font1{text-align:center;}[class~=left2] [class~=van-image]{display:inline-block;}[class~=right1],[class~=right] [class~=van-button]{border-left-width:.75pt;}[class~=right1],[class~=right] [class~=van-button]{border-bottom-width:.75pt;}canvas{position:absolute;}[class~=right] [class~=van-button],[class~=right1]{border-right-width:.75pt;}[class~=right1],[class~=right] [class~=van-button]{border-top-width:.75pt;}[class~=right] [class~=van-button],[class~=right1]{border-left-style:solid;}[class~=right] [class~=van-button],[class~=right1]{border-bottom-style:solid;}[class~=right1],[class~=right] [class~=van-button]{border-right-style:solid;}[class~=right1],[class~=right] [class~=van-button]{border-top-style:solid;}[class~=left2] [class~=van-image]{margin-top:.244791667in;}[class~=left2] [class~=van-image]{margin-left:.104166667in;}[class~=right] [class~=van-button],[class~=right1]{border-left-color:#fff;}[class~=right1]{border-bottom-color:#fff;}[class~=left2] [class~=font]{margin-top:1.5625pc;}[class~=right1]{border-right-color:#fff;}canvas{z-index:-1;}[class~=right] [class~=van-button],[class~=right1]{border-top-color:#fff;}[class~=right1]{border-image:none;}[class~=right] [class~=van-button]{margin-left:10px;}[class~=ayimgui]{background-image:linear-gradient(to right,#000 0%,#000 35%,#000 35%,#000 100%);}[class~=right] [class~=van-button]{margin-top:.625pc;}[class~=ayimgui]{z-index:1;}[class~=van-button],[class~=right] [class~=van-button]{font-size:50px;}[class~=van-button],[class~=right] [class~=van-button]{width:6.25pc;}[class~=ayimgui]{height:100%;}[class~=ayimgui]{border-radius:10px;}[class~=ayimgui]{overflow:hidden;}[class~=right] [class~=van-button],[class~=van-button]{border-radius:3.75pt;}[class~=ayimgui]{-webkit-user-select:none;}[class~=ayimgui]{-moz-user-select:none;}[class~=van-button],[class~=right] [class~=van-button]{background-color:#000;}[class~=ayimgui]{-ms-user-select:none;}[class~=ayimgui]{user-select:none;}[class~=ayimgui]{border-left-width:3pt;}[class~=ayimgui]{border-bottom-width:3pt;}[class~=ayimgui]{border-right-width:3pt;}[class~=ayimgui]{border-top-width:3pt;}[class~=ayimgui]{border-left-style:solid;}[class~=ayimgui]{border-bottom-style:solid;}[class~=ayimgui]{border-right-style:solid;}[class~=ayimgui]{border-top-style:solid;}[class~=ayimgui]{border-left-color:#00b012;}[class~=ayimgui]{border-bottom-color:#00b012;}[class~=ayimgui]{border-right-color:#00b012;}[class~=ayimgui]{border-top-color:#00b012;}[class~=ayimgui]{border-image:none;}[class~=ayimgui]{box-shadow:0 0 .9375pc #00b012 inset,0 0 .416666667in #00b012;}[class~=ayimgui]{display:flex;}[class~=van-button],[class~=right] [class~=van-button]{border-bottom-color:#fff;}[class~=van-button],[class~=right] [class~=van-button]{border-right-color:#fff;}[class~=van-cell],[class~=van-button]{margin-left:25px;}[class~=right] [class~=van-button]{border-image:none;}[class~=right] [class~=van-button],[class~=van-button]{box-shadow:0 0 0pt #fff inset,0 0 .3125pc #fff;}.right .van-cell{margin-left:75pt;}.right .van-cell,[class~=van-button],[class~=van-cell]{margin-bottom:.625pc;}[class~=van-button],.right .van-cell,[class~=van-cell]{margin-right:.625pc;}[class~=left2] label1{font-size:.5625pc;}[class~=van-button],[class~=van-cell]{margin-top:.260416667in;}.right .van-cell,[class~=van-button],[class~=van-cell]{text-align:center;}.right .van-cell{margin-top:.520833333in;}[class~=van-button],.right .van-cell{border-left-width:.75pt;}[class~=van-button],.right .van-cell{border-bottom-width:.75pt;}[class~=van-button],.right .van-cell{border-right-width:.75pt;}[class~=van-cell],.right .van-cell{font-size:37.5pt;}.right .van-cell,[class~=van-button]{border-top-width:.75pt;}[class~=van-button],.right .van-cell{border-left-style:solid;}.right .van-cell{width:141pt;}[class~=van-button],.right .van-cell{border-bottom-style:solid;}.right .van-cell,[class~=van-cell]{border-radius:.052083333in;}[class~=van-button],.right .van-cell{border-right-style:solid;}.right .van-cell,[class~=van-button]{border-top-style:solid;}[class~=van-button],.right .van-cell{border-left-color:#fff;}[class~=van-cell],.right .van-cell{background-color:#000;}.right .van-cell,[class~=van-button]{border-top-color:#fff;}[class~=van-button]{border-image:none;}[class~=van-notify]{z-index:99;}[class~=van-notify]{position:fixed;}*{-webkit-touch-callout:none;}*{-webkit-user-select:none;}[class~=van-cell]{width:300pt;}[class~=van-cell]{border-left-width:.010416667in;}.right .van-cell,[class~=van-cell]{border-bottom-color:#fff;}[class~=van-cell]{border-bottom-width:.010416667in;}[class~=van-cell],.right .van-cell{border-right-color:#fff;}[class~=van-cell]{border-right-width:.010416667in;}[class~=van-cell]{border-top-width:.010416667in;}[class~=van-cell]{border-left-style:solid;}[class~=van-cell]{border-bottom-style:solid;}[class~=van-cell]{border-right-style:solid;}[class~=van-cell]{border-top-style:solid;}.right .van-cell{border-image:none;}[class~=van-cell]{border-left-color:#fff;}[class~=van-cell],.right .van-cell{box-shadow:0 0 0px #fff inset,0 0 .3125pc #fff;}[class~=van-cell]{border-top-color:#fff;}[class~=van-cell]{border-image:none;}[class~=van-field__control]{display:block;}[class~=van-field__control]{box-sizing:border-box;}[class~=van-field__control]{width:100%;}[class~=van-field__control]{min-width:0;}[class~=van-field__control]{margin-left:0;}[class~=van-field__control]{margin-bottom:0;}[class~=van-field__control]{margin-right:0;}[class~=van-field__control]{margin-top:0;}*{user-select:none;}[class~=van-field__control]{padding-left:0;}[class~=van-field__control]{padding-bottom:0;}[class~=van-field__control]{padding-right:0;}[class~=van-field__control]{padding-top:0;}[class~=van-field__control]{color:white;}[class~=van-field__control]{line-height:inherit;}[class~=van-field__control]{text-align:left;}[class~=van-field__control]{background-color:transparent;}[class~=van-field__control]{border-left-width:0;}[class~=left2] label1{margin-left:23.25pt;}[class~=van-field__control]{border-bottom-width:0;}[class~=van-field__control]{border-right-width:0;}[class~=van-field__control]{border-top-width:0;}[class~=van-field__control]{border-left-style:none;}[class~=van-field__control]{border-bottom-style:none;}[class~=van-field__control]{border-right-style:none;}[class~=van-field__control]{border-top-style:none;}[class~=van-field__control]{border-left-color:currentColor;}[class~=van-field__control]{border-bottom-color:currentColor;}[class~=van-field__control]{border-right-color:currentColor;}[class~=van-field__control]{border-top-color:currentColor;}[class~=van-field__control]{border-image:none;}[class~=van-field__control]{resize:none;}[class~=van-field__control]{-webkit-user-select:auto;}[class~=van-field__control]{user-select:auto;}[class~=left2] label1{margin-top:.625pc;}[class~=left2] label1{text-align:center;}*{outline:none;}*{-webkit-tap-highlight-color:transparent;}
+body {
+			height: 280px;
+			width: 410px;
+		}
+
+		* {
+			padding: 0;
+			margin: 0;
+			color: #fff;
+		}
+
+		.ayimgui {
+			position: fixed;
+			width: 410px;
+			height: 280px;
+			top: calc(50% - 180px);
+			left: calc(50% - 180px);
+			z-index: 999;
+			background: rgba(0, 0, 0, 1.0);
+			/* màu background menu */
+			background-size: 25599px;
+			/*border-color: #04ff00;
+					border-radius: 10px;*/
+			overflow: hidden;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
+			border: #7c81aa;
+
+		}
+
+		.onlyTitle {
+			height: 25px !important;
+
+		}
+
+
+		.ayimgui .aytitle {
+			padding: 0 5px;
+			font-size: 22px;
+			background: rgba(5, 56, 114, 0.9);
+			/* thanh tên menu */
+		}
+
+
+		.ayimgui .aytitle .titleClose {
+			position: absolute;
+			top: 3px;
+			right: 6px;
+			color: #062d61;
+		}
+
+		.ayimgui .aytitle .titleClose:hover {
+			color: #000;
+		}
+
+		.ayimgui .aybody {
+			padding: 15px;
+			height: calc(100% - 21px - 15px - 15px);
+			/*减去标题高度，减去上线padding高度*/
+			overflow: auto;
+			font-size: 15px;
+		}
+
+
+		.aytext {
+			width: 100%;
+			margin-bottom: 10px;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-around;
+			color: #fff;
+		}
+
+		input[type=checkbox] {
+			visibility: hidden;
+			vertical-align: middle;
+			margin-bottom: 1px;
+			cursor: pointer;
+			position: relative;
+			width: 26px;
+			height: 30px;
+
+
+		}
+
+		input[type=checkbox]::after {
+			position: absolute;
+			top: 0;
+			margin-top: 1px;
+			width: 22px;
+			height: 22px;
+			border: 1px solid #2e2c38;
+			border-radius: 30px;
+			background-color: #868589;
+			display: inline-block;
+			visibility: visible;
+			text-align: center;
+			content: ' '
+
+		}
+
+		/* giao diện nút bật chức năng */
+		input[type=checkbox]:checked::after {
+			content: "✔️";
+			color: #075c5c;
+			border-color: #000000;
+			background-color: #ffffff;
+			font-size: 16px;
+			font-weight: bold;
+
+		}
+
+
+
+
+		input[type=lradio] {
+			width: 20px;
+			height: 20px;
+			margin-right: 6px;
+			border: none;
+			outline-style: none;
+			-webkit-appearance: none;
+			vertical-align: middle;
+			border: 1px solid #686868F0;
+			border-radius: 50%;
+		}
+
+		input[type=lradio]:checked {
+			border: 6px solid #2F7DCDF0;
+			background: #E8E8E8;
+		}
+
+		.onlySelect {
+			background-color: rgb(254, 254, 254);
+			border: none;
+		}
+
+		.onlySelect .el-select-dropdown__item {
+			color: #000;
+
+		}
+
+		.onlySelect .el-select-dropdown__item.hover,
+		.el-select-dropdown__item:hover:hover {
+			background-color: transparent;
+		}
+
+		.onlySelect .popper__arrow {
+			border-bottom-color: rgb(254, 254, 254) !important;
+		}
+
+		.onlySelect.el-popper[x-placement^=bottom] .popper__arrow::after {
+			border-bottom-color: rgb(8254, 254, 254) !important;
+		}
+
+		.el-select {
+			width: 100%;
+		}
+
+		.el-select .el-input {
+			background-color: rgb(254, 254, 254);
+		}
+
+		.el-select .el-input__suffix {
+			background-color: rgb(160, 196, 243);
+			color: #000;
+			right: 0;
+		}
+
+		.el-select .el-select__caret {
+color: #000;
+		}
+
+		.el-select .el-input__inner {
+			background-color: transparent;
+			border: none;
+			color: #000;
+		}
+
+		.el-select .el-input .el-select__caret {
+			color: #000;
+		}
+
+
+		.el-scrollbar .el-scrollbar__bar {
+			opacity: 1 !important;
+		}
+
+		.el-button {
+			font-size: 14px;
+			padding: 5px 10px;
+			line-height: 14px;
+			color: #000;
+			background-color: #B8D1F2;
+		}
+
+		.el-button:hover {
+			opacity: .7;
+			color: #000;
+			background-color: #B8D1F2;
+		}
+
+		.el-button:focus,
+		.el-button:hover {
+			color: #000;
+			background-color: #B8D1F2;
+		}
+
+		.aycollapse {
+			width: 100%;
+			font-size: 14px;
+			background-color: rgb(177, 206, 240);
+			color: #000;
+		}
+
+		.aytab {
+			width: 100%;
+			height: 25px;
+			display: flex;
+			border-bottom: 2px solid rgb(200, 217, 233);
+		}
+
+		.aytab span {
+			padding: 1 2 px;
+			height: 100%px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background-color: rgb(189, 199, 208);
+			color: #fff;
+			font-size: 16px;
+			font-weight: 500;
+			margin-left: 2px;
+			border-radius: 6px 6px 0 0;
+			cursor: pointer;
+		}
+
+
+		.el-input input {
+			background-color: rgb(254, 254, 254);
+			border: none;
+			border-radius: 0px;
+
+		}
+
+		input[type=range] {
+			-webkit-appearance: none;
+		}
+
+		input[type=range]:focus {
+			outline: none;
+		}
+
+		input[type=range]::-webkit-slider-runnable-track {
+			height: 21px;
+			cursor: pointer;
+			animate: 0.2s;
+			background: #5c5870;
+			border-radius: 100px;
+		}
+
+		input[type=range]::-webkit-slider-thumb {
+			border: 1px solid #000000;
+			height: 21px;
+			width: 21px;
+			border-radius: 30px;
+			background: #489af7;
+			cursor: pointer;
+			-webkit-appearance: none;
+			margin-top: -0px;
+		}
+
+		input[type=range]:focus::-webkit-slider-runnable-track {
+			background: #0d1804;
+		}
+
+		input[type=range]::-webkit-slider-thumb::after {
+			content: attr(value) "%";
+			position: absolute;
+			top: -25px;
+			left: 50%;
+			transform: translateX(-50%);
+			color: #ffffff;
+			font-weight: bold;
+			font-size: 12px;
+		}
