--- a/css/index2.css
+++ b/css/index2.css
@@ -1,3 +1,5 @@
+// backroud password by cuong is me
+
 body, html {
             height: 100%;
             margin: 0;
@@ -42,6 +44,10 @@ body, html {
             #passwordPrompt button:hover {
                 background-color: #ba2f2f;
             }
+
+            #app {
+                display: none; /* Ẩn nội dung trang chính cho đến khi nhập đúng mật khẩu */
+            }
             .button-link {
             display: inline-block;
             padding: 10px 20px;
@@ -50,7 +56,7 @@ body, html {
             background-color: #e94560;
             text-decoration: none;
             border-radius: 5px;
-            transition: background-color 0.3s ease;
+            transition: 0.3s ease;
             text-align: center;
             cursor: pointer;
             }
