--- a/css/index2.css
+++ b/css/index2.css
@@ -42,3 +42,19 @@ body, html {
         #passwordPrompt button:hover {
             background-color: #ba2f2f;
         }
+.button-link {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: #ffffff;
+            background-color: #e94560;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+            text-align: center;
+            cursor: pointer;
+        }
+
+        .button-link:hover {
+            background-color: #ba2f2f;
+        }
