--- a/css/index1.css
+++ b/css/index1.css
@@ -1,278 +1,341 @@
 // backroud menu by cuong is me
-body{
-			height: 280px;
-			width: 410px;
-		}
+
+
+<style>
 		* {
-					padding: 0;
-					margin: 0;
-		  color:#fff;
-				}
+			padding: 0;
+			margin: 0;
+			font-family: 'Roboto Condensed', sans-serif;
+		}
+
+		.ayimgui {
+			position: fixed;
+			width: 360px;
+			height: 320px;
+			border: 5px;
+			top: calc(50% - 180px);
+			left: calc(50% - 180px);
+			z-index: 999;
+			background-color: rgba(0, 0, 0, 0.8);
+			border-radius: 8px;
+			border: 1px solid #555;
+			overflow: hidden;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
+	
+		}
+  .m1txt{
+		color: #f0f0f0;
+		margin-bottom: 5px;
 		
-				.ayimgui {			
-					position: fixed;
-					width: 410px;
-					height: 280px;
-					top: calc(50% - 180px);
-					left: calc(50% - 180px);
-					z-index: 999;
-					background: rgba(0, 0, 0, 1.0); /* màu background menu */
-					background-size: 25599px;
-					/*border-color: #04ff00;
-					border-radius: 10px;*/	
-					overflow: hidden;
-					-webkit-user-select: none;
-					-moz-user-select: none;
-					-ms-user-select: none;
-					user-select: none;
-					border: #7c81aa;
-		
-				}
-		
-			  .onlyTitle {
-					height: 25px !important;
-		
-				}
+  }
+	.m1txt::before {
+    content: "•";
+    margin-right: 5px;
+}
+
+		.onlyTitle {
+			height: 21px !important;
+		}
+
+		.ayimgui .aytitle {
+			padding: 5px;
+			font-size: 20px;
+			background-color: #000;
 			
-		
-			 .ayimgui .aytitle {
-					padding: 0 5px;
-					font-size: 22px;
-					background: rgba(5, 56, 114, 0.9); /* thanh tên menu */
-				} 
-		
-		
-				.ayimgui .aytitle .titleClose {
-					position: absolute;
-					top: 3px;
-					right: 6px;
-					color: #062d61;
-				}
-		
-				.ayimgui .aytitle .titleClose:hover {
-					color: #000;
-				}
-		
-				.ayimgui .aybody {
-					padding: 15px;
-					height: calc(100% - 21px - 15px - 15px);
-					/*减去标题高度，减去上线padding高度*/
-					overflow: auto;
-					font-size: 15px;
-				}
-		
-		
-				.aytext {
-					width: 100%;
-					margin-bottom: 10px;
-					display: flex;
-					flex-direction: column;
-					justify-content: space-around;
-					color: #fff;
-				}
-		
-				input[type=checkbox]{
-		 visibility: hidden;
-		 vertical-align:middle; margin-bottom:1px;
-		 cursor: pointer;
-		 position: relative;
-		 width: 26px;
-		 height:30px;
-		
-		
 		}
-		input[type=checkbox]::after{
-		 position: absolute;
-		 top: 0;
-		 margin-top:1px;
-		 width: 22px; height: 22px;
-		 border: 1px solid #2e2c38;
-		 border-radius: 30px;
-		 background-color:#868589;
-		 display: inline-block;
-		 visibility: visible;
-		 text-align: center;
-		 content: ' '
-		
+		.ayimgui .aytitle i {
+    font-size: 20px; 
+    color: #f0f0f0;
+}
+		 
+		.ayimgui .aytitle .titleClose {
+			position: absolute;
+			top: 5px;
+			right: 5px;
+			color: #F0F0F0;
 		}
-		
-		/* giao diện nút bật chức năng */
-		input[type=checkbox]:checked::after {
-			content: "✔️";
-			color:#075c5c;
-			border-color: #000000;
-			background-color: #ffffff;
-			font-size: 16px;
+
+		.ayimgui .aytitle .titleClose:hover {
+			color: #409EFF;
+		}
+
+		.ayimgui .aybody {
+			padding: 15px;
+			height: calc(100% - 21px - 15px - 15px);
+			/*减去标题高度，减去上线padding高度*/
+			overflow: auto;
+			font-size: 14px;
+		}
+
+
+		.aytext {
+			width: 100%;
+			padding-top: 5px;
+			margin-bottom: 5px;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-around;
+			color: #99ff66;
+		}
+
+		.el-checkbox {
+			margin: 0px;
+		}
+
+		.el-checkbox__label {
+			color: #f0f0f0;
+		}
+
+		.el-checkbox__input.is-checked+.el-checkbox__label {
+			color: #409EFF;
+		}
+
+		.el-checkbox__inner {
+			background-color: #333333;
+			border-radius: 50%;
+			width: 24px; /* Tăng kích thước */
+			height: 24px; /* Tăng kích thước */
+		}
+
+
+		.el-radio {
+			margin: 8px 0;
+		}
+
+		.el-radio__label {
+			color: #F0F0F0;
+		}
+
+		.el-radio__input.is-checked+.el-radio__label {
+			color: #f0f0f0;
+		}
+
+		.el-radio__inner {
+			background-color: rgb(254, 254, 254);
+			border: none;
+		}
+
+		.el-radio__input.is-checked .el-radio__inner {
+			background-color: rgb(254, 254, 254);
+		}
+
+		.el-radio__inner::after {
+			width: 10px;
+			height: 10px;
+			background-color: rgb(58, 138, 247);
+		}
+
+		.onlySelect {
+			background-color: rgb(254, 254, 254);
+			border: none;
+		}
+
+		.onlySelect .el-select-dropdown__item {
+			color: #F0F0F0;
+
+		}
+
+		.onlySelect .el-select-dropdown__item.hover,
+		.el-select-dropdown__item:hover:hover {
+			background-color: transparent;
+		}
+
+		.onlySelect .popper__arrow {
+			border-bottom-color: rgb(254, 254, 254) !important;
+		}
+
+		.onlySelect.el-popper[x-placement^=bottom] .popper__arrow::after {
+			border-bottom-color: rgb(8254, 254, 254) !important;
+		}
+
+		.el-select {
+			width: 100%;
+		}
+
+		.el-select .el-input {
+			background-color: rgb(254, 254, 254);
+		}
+
+		.el-select .el-input__suffix {
+			background-color: rgb(160, 196, 243);
+			color: #F0F0F0;
+			right: 0;
+		}
+
+		.el-select .el-select__caret {
+			color: #F0F0F0;
+		}
+
+		.el-select .el-input__inner {
+			background-color: transparent;
+			border: none;
+			color: #F0F0F0;
+		}
+
+		.el-select .el-input .el-select__caret {
+			color: #F0F0F0;
+		}
+
+		/* 解决ios下拉需要点两次 */
+		.el-scrollbar .el-scrollbar__bar {
+			opacity: 1 !important;
+		}
+
+		.el-button {
+			font-size: 14px;
+			padding: 5px 10px;
+			line-height: 14px;
+			color: #F0F0F0;
+			background-color: #B8D1F2;
+		}
+
+		.el-button:hover {
+			opacity: .7;
+			color: #F0F0F0;
+			background-color: #B8D1F2;
+		}
+
+		.el-button:focus,
+		.el-button:hover {
+			color: #F0F0F0;
+			background-color: #B8D1F2;
+		}
+
+		.aycollapse {
+			width: 100%;
+			font-size: 14px;
+			background-color: rgb(177, 206, 240);
+			color: #F0F0F0;
+		}
+
+		.aytab {
+			width: 100%;
+			height: 25px;
+			display: flex;
+			border-bottom: 0.8px solid #666;
+			order: 1;
+		}
+
+		.aytab span {
+			
+			padding: 0 5px;
+			width: 15%;
+			height: 97%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background-color: rgb(189, 199, 208);
+			color: #F0F0F0;
+			font-size: 14px;
 			font-weight: bold;
-		
+			margin-left: 10px;
+			border-top: 0.8px solid #666;
+			border-right: 0.8px solid #666;
+			border-left: 0.8px solid #666;
+			border-radius: 6px 6px 0 0;
+			cursor: pointer;
+			order: 2;
 		}
-		
-				
-		
-		
-		input[type=lradio]  {
-			width:20px;
-			height:20px;
-			margin-right:6px;
-			border:none;
-			outline-style:none;
-			-webkit-appearance:none;
-			vertical-align:middle;
-			border:1px solid #686868F0;
-			border-radius:50%;
+.aycollapses span {
+    background-color: rgb(177, 206, 240);
+    color: #000;
+	}
+
+		.el-input input {
+			background-color: rgb(254, 254, 254);
+			border: none;
+			border-radius: 0px;
 		}
-		input[type=lradio]:checked {
-			border:6px solid #2F7DCDF0;
-			background:#E8E8E8;
-		}
-		
-				.onlySelect {
-					background-color: rgb(254, 254, 254);
-					border: none;
-				}
-		
-				.onlySelect .el-select-dropdown__item {
-					color: #000;
-		
-				}
-		
-				.onlySelect .el-select-dropdown__item.hover,
-				.el-select-dropdown__item:hover:hover {
-					background-color: transparent;
-				}
-		
-				.onlySelect .popper__arrow {
-					border-bottom-color: rgb(254, 254, 254) !important;
-				}
-		
-				.onlySelect.el-popper[x-placement^=bottom] .popper__arrow::after {
-					border-bottom-color: rgb(8254, 254, 254) !important;
-				}
-		
-				.el-select {
-					width: 100%;
-				}
-		
-				.el-select .el-input {
-					background-color: rgb(254, 254, 254);
-				}
-		
-				.el-select .el-input__suffix {
-					background-color: rgb(160, 196, 243);
-					color: #000;
-					right: 0;
-				}
-		
-				.el-select .el-select__caret {
-					color: #000;
-				}
-		
-				.el-select .el-input__inner {
-					background-color: transparent;
-					border: none;
-					color: #000;
-				}
-		
-				.el-select .el-input .el-select__caret {
-					color: #000;
-				}
-		
-				
-				.el-scrollbar .el-scrollbar__bar {
-					opacity: 1 !important;
-				}
-		
-				.el-button {
-					font-size: 14px;
-					padding: 5px 10px;
-					line-height: 14px;
-					color: #000;
-					background-color: #B8D1F2;
-				}
-		
-				.el-button:hover {
-					opacity: .7;
-					color: #000;
-					background-color: #B8D1F2;
-				}
-		
-				.el-button:focus,
-				.el-button:hover {
-					color: #000;
-					background-color: #B8D1F2;
-				}
-		
-				.aycollapse {
-					width: 100%;
-					font-size: 14px;
-					background-color: rgb(177, 206, 240);
-					color: #000;
-				}
-		
-				.aytab {
-					width: 100%;
-					height: 25px;
-					display: flex;
-					border-bottom: 2px solid rgb(200, 217, 233);
-				}
-		
-				.aytab span {
-					padding: 1 2 px;
-					height: 100%px;
-					display: flex;
-					align-items: center;
-					justify-content: center;
-					background-color: rgb(189, 199, 208);
-					color: #fff;
-					font-size: 16px;
-					font-weight: 500;
-					margin-left: 2px;
-					border-radius: 6px 6px 0 0;
-					cursor: pointer;
-				}
-		
-		
-				.el-input input {
-					background-color: rgb(254, 254, 254);
-					border: none;
-					border-radius: 0px;
-				
-				}
-				
-		input[type=range] {
-		  -webkit-appearance: none;
-		}
-		input[type=range]:focus {
-		  outline: none;
-		}
-		input[type=range]::-webkit-slider-runnable-track {
-		  height: 21px;
-		  cursor: pointer;
-		  animate: 0.2s;
-		  background: #5c5870;
-		  border-radius: 100px;
-		}
-		input[type=range]::-webkit-slider-thumb {
-		  border: 1px solid #000000;
-		  height: 21px;
-		  width: 21px;
-		  border-radius: 30px;
-		  background: #489af7;
-		  cursor: pointer;
-		  -webkit-appearance: none;
-		  margin-top: -0px;
-		}
-		input[type=range]:focus::-webkit-slider-runnable-track {
-		  background: #0d1804;
-		}
-		input[type=range]::-webkit-slider-thumb::after {
-		  content: attr(value) "%";
-		  position: absolute;
-		  top: -25px; 
-		  left: 50%;
-		  transform: translateX(-50%);
-		  color: #ffffff;
-		  font-weight: bold;
-		  font-size: 12px;
-		}
-       
+		    .checkbox-wrapper-24 .checkbox {
+      display: table-cell;
+      width: 100%;
+      height: 100%;
+      vertical-align: middle;
+      text-align: center;
+      
+    }
+  
+    .checkbox-wrapper-24 label {
+      display: inline-block;
+      color: #f9f9f9;
+      cursor: pointer;
+      position: relative;
+      margin-bottom: 5px;
+    }
+    .checkbox-wrapper-24 label span {
+      display: inline-block;
+      position: relative;
+      background-color: #999;
+      width: 25px;
+      height: 25px;
+      transform-origin: center;
+      border-radius: 50%;
+      vertical-align: middle;
+      margin-right: 10px;
+     
+    }
+    .checkbox-wrapper-24 label span:before {
+      content: "";
+      width: 0px;
+      height: 2px;
+      border-radius: 2px;
+      
+      position: absolute;
+      transform: rotate(45deg);
+      top: 10px;
+      left: 4px;
+      transition: width 50ms ease 50ms;
+      transform-origin: 0% 100%;
+    }
+    .checkbox-wrapper-24 label span:after {
+      content: "";
+      width: 0;
+      height: 2px;
+      border-radius: 2px;
+      
+      position: absolute;
+      transform: rotate(305deg);
+      top: 15px;
+      left: 8px;
+      
+      transform-origin: 25% 0%;
+    }
+    .checkbox-wrapper-24 label:hover span:before {
+      width: 7px;
+      
+    }
+    .checkbox-wrapper-24 label:hover span:after {
+      width: 15px;
+      
+    }
+  
+    .checkbox-wrapper-24 input[type=checkbox] {
+      display: none;
+			
+    }
+    .checkbox-wrapper-24 input[type=checkbox]:checked + label span {
+			 background-color: #666;
+    }
+    .checkbox-wrapper-24 input[type=checkbox]:checked + label span:after {
+      width: 16px;
+      background: #00ffff;
+    
+    }
+    .checkbox-wrapper-24 input[type=checkbox]:checked + label span:before {
+      width: 9px;
+      background: #00ffff;
+      
+    }
+  .vip {
+    background-color: gold; 
+    color: black;
+    padding: 3px 20px;
+    position: absolute;
+    bottom: 25px;
+    right: 0;
+    transform: rotate(-45deg) translate(15px, 15px);;
+    transform-origin: right bottom;
+  }
