--- a/css/index1.css
+++ b/css/index1.css
@@ -338,3 +338,33 @@
     transform: rotate(-45deg) translate(15px, 15px);;
     transform-origin: right bottom;
   }
+
+	</style>
+</header>
+  <script src="https://apps.bdimg.com/libs/jquery/2.1.0/jquery.min.js"></script>
+	  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+	
+  <script type="text/javascript">
+      var message = "NoRightClicking";
+      function defeatIE() {
+          if (document.all) {
+              (message);
+              return false;
+          }
+      }
+      function defeatNS(e) {
+          if (document.layers || (document.getElementById && !document.all)) {
+              if (e.which == 2 || e.which == 3) {
+                  (message);
+                  return false;
+              }
+          }
+      }
+      if (document.layers) {
+          document.captureEvents(Event.MOUSEDOWN);
+          document.onmousedown = defeatNS;
+      } else {
+          document.onmouseup = defeatNS;
+          document.oncontextmenu = defeatIE;
+      }
+      document.oncontextmenu = new Function("return false")
